--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -260,6 +259,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -537,7 +537,6 @@ allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
-allow 185.86.148.90;
 allow 188.165.200.97;
 allow 188.166.92.179;
 allow 188.172.229.15;
@@ -1134,7 +1133,6 @@ allow 2a02:2970:1001::4b;
 allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
@@ -1257,6 +1255,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1458,6 +1457,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
@@ -1505,8 +1505,8 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.216.2.142;
 allow 35.0.127.52;
+allow 35.173.9.163;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1590,11 +1590,10 @@ allow 45.95.169.227;
 allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
-allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.95.201;
+allow 46.195.91.44;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1771,6 +1770,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
@@ -1782,7 +1782,6 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
-allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
