--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -310,7 +310,6 @@ deny 2a02:2970:1001::4b;
 deny 2a02:2970:1001::4c;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c206:2095:2624::1;
@@ -433,6 +432,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -634,6 +634,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
+deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
