--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -310,6 +310,7 @@ allow 2a02:2970:1001::4b;
 allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
@@ -343,7 +344,6 @@ allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
-allow 2a03:4000:6:b136::4;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:6f20:531::254;
@@ -432,7 +432,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
