--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -935,6 +935,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -954,6 +955,7 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1168,6 +1170,7 @@ allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+allow 2a03:4000:6:b136::4;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:6f20:531::254;
@@ -1506,9 +1509,11 @@ allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.170.95.138;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
+allow 37.120.188.156;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1624,7 +1629,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.23.56.104;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1677,7 +1681,6 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
-allow 77.220.196.253;
 allow 77.232.143.248;
 allow 77.48.28.193;
 allow 77.48.28.237;
@@ -1698,7 +1701,6 @@ allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
-allow 82.153.138.120;
 allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
