--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -9,7 +9,6 @@ set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
-set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
@@ -131,12 +130,12 @@ set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
+set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -263,6 +262,7 @@ set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
 set_real_ip_from 2620:18c:0:192::216;
 set_real_ip_from 2620:18c:0:192::217;
 set_real_ip_from 2620:18c:0:192::218;
@@ -278,12 +278,105 @@ set_real_ip_from 2620:18c:0:192::227;
 set_real_ip_from 2620:18c:0:192::228;
 set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
+set_real_ip_from 2620:7:6001::101;
+set_real_ip_from 2620:7:6001::102;
+set_real_ip_from 2620:7:6001::103;
+set_real_ip_from 2620:7:6001::104;
+set_real_ip_from 2620:7:6001::105;
+set_real_ip_from 2620:7:6001::106;
+set_real_ip_from 2620:7:6001::107;
+set_real_ip_from 2620:7:6001::108;
+set_real_ip_from 2620:7:6001::109;
+set_real_ip_from 2620:7:6001::110;
+set_real_ip_from 2620:7:6001::111;
+set_real_ip_from 2620:7:6001::112;
+set_real_ip_from 2620:7:6001::113;
+set_real_ip_from 2620:7:6001::114;
+set_real_ip_from 2620:7:6001::115;
+set_real_ip_from 2620:7:6001::116;
+set_real_ip_from 2620:7:6001::117;
+set_real_ip_from 2620:7:6001::118;
+set_real_ip_from 2620:7:6001::119;
 set_real_ip_from 2620:7:6001::120;
+set_real_ip_from 2620:7:6001::121;
+set_real_ip_from 2620:7:6001::122;
+set_real_ip_from 2620:7:6001::123;
+set_real_ip_from 2620:7:6001::140;
+set_real_ip_from 2620:7:6001::141;
+set_real_ip_from 2620:7:6001::142;
+set_real_ip_from 2620:7:6001::143;
+set_real_ip_from 2620:7:6001::144;
+set_real_ip_from 2620:7:6001::145;
+set_real_ip_from 2620:7:6001::146;
+set_real_ip_from 2620:7:6001::147;
+set_real_ip_from 2620:7:6001::148;
+set_real_ip_from 2620:7:6001::149;
+set_real_ip_from 2620:7:6001::150;
+set_real_ip_from 2620:7:6001::151;
+set_real_ip_from 2620:7:6001::152;
+set_real_ip_from 2620:7:6001::153;
+set_real_ip_from 2620:7:6001::154;
+set_real_ip_from 2620:7:6001::155;
+set_real_ip_from 2620:7:6001::156;
+set_real_ip_from 2620:7:6001::157;
+set_real_ip_from 2620:7:6001::158;
+set_real_ip_from 2620:7:6001::159;
+set_real_ip_from 2620:7:6001::160;
+set_real_ip_from 2620:7:6001::161;
+set_real_ip_from 2620:7:6001::162;
+set_real_ip_from 2620:7:6001::163;
+set_real_ip_from 2620:7:6001::164;
+set_real_ip_from 2620:7:6001::165;
+set_real_ip_from 2620:7:6001::166;
+set_real_ip_from 2620:7:6001::167;
+set_real_ip_from 2620:7:6001::169;
+set_real_ip_from 2620:7:6001::170;
+set_real_ip_from 2620:7:6001::171;
+set_real_ip_from 2620:7:6001::172;
+set_real_ip_from 2620:7:6001::173;
+set_real_ip_from 2620:7:6001::174;
+set_real_ip_from 2620:7:6001::175;
+set_real_ip_from 2620:7:6001::176;
+set_real_ip_from 2620:7:6001::177;
+set_real_ip_from 2620:7:6001::178;
+set_real_ip_from 2620:7:6001::179;
+set_real_ip_from 2620:7:6001::180;
+set_real_ip_from 2620:7:6001::181;
+set_real_ip_from 2620:7:6001::182;
+set_real_ip_from 2620:7:6001::183;
+set_real_ip_from 2620:7:6001::184;
+set_real_ip_from 2620:7:6001::185;
+set_real_ip_from 2620:7:6001::186;
+set_real_ip_from 2620:7:6001::187;
+set_real_ip_from 2620:7:6001::188;
+set_real_ip_from 2620:7:6001::189;
+set_real_ip_from 2620:7:6001::e664;
+set_real_ip_from 2620:7:6001::ffff:c759:e640;
+set_real_ip_from 2620:7:6001::ffff:c759:e642;
+set_real_ip_from 2620:7:6001::ffff:c759:e643;
+set_real_ip_from 2620:7:6001::ffff:c759:e646;
+set_real_ip_from 2620:7:6001::ffff:c759:e647;
+set_real_ip_from 2620:7:6001::ffff:c759:e648;
+set_real_ip_from 2620:7:6001::ffff:c759:e649;
+set_real_ip_from 2620:7:6001::ffff:c759:e64a;
+set_real_ip_from 2620:7:6001::ffff:c759:e64b;
+set_real_ip_from 2620:7:6001::ffff:c759:e64c;
+set_real_ip_from 2620:7:6001::ffff:c759:e64d;
+set_real_ip_from 2620:7:6001::ffff:c759:e64e;
+set_real_ip_from 2620:7:6001::ffff:c759:e64f;
+set_real_ip_from 2620:7:6001::ffff:c759:e650;
+set_real_ip_from 2620:7:6001::ffff:c759:e651;
+set_real_ip_from 2620:7:6001::ffff:c759:e652;
+set_real_ip_from 2620:7:6001::ffff:c759:e653;
+set_real_ip_from 2620:7:6001::ffff:c759:e655;
+set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
+set_real_ip_from 2620:7:6001::ffff:c759:e658;
+set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:d680::;
-set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
